# scarfy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  test_run.py
.github/workflows/: ci.yml
config/: .gitignore  sample.yaml
prompts/: .gitignore
src/scarfy/: __init__.py  main.py
src/scarfy/agents/: claude_code.py  echo.py  file_print.py
src/scarfy/config/: loader.py
src/scarfy/core/: engine.py  events.py  interfaces.py
src/scarfy/outputs/: console.py  file.py
src/scarfy/prompts/: code_review.md  meeting_summary.md  paper_review.md  sample_meeting_summary.md
src/scarfy/triggers/: file_watcher.py  manual.py
src/scarfy/utils/: file_operations.py  logger.py  mcp_tools.py  template_engine.py
tests/: test_main.py
tests/agents/: test_claude_code.py
tests/config/: test_loader.py  test_prompt_loader.py  test_sample_config.py
tests/core/: test_engine.py  test_events.py  test_interfaces.py
tests/utils/: test_file_operations.py  test_mcp_tools.py  test_template_engine.py
